Fix for album art stretching

--- a/data/interfaces/default/css/style.css
+++ b/data/interfaces/default/css/style.css
@@ -157,8 +157,8 @@ small {
 }
 img.albumArt {
   float: left;
-  min-height: 100%;
-  min-width: 100%;
+  min-height: 64px;
+  min-width: 64px;
   max-width: 250px;
   max-height: 300px;
   position: relative;
